# mindora_adk_agents

./: .gitignore  CLAUDE.md  justfile  main.py  pyproject.toml  run_server.py  test_web_extractor_integration.py
.claude/commands/: design_agent.md
backend/: fast_api.py
backend/agents/adk_demo/: agent.py
backend/agents/assistant/: __init__.py  agent.py  config.json
backend/agents/assistant/eval_sets/: test_eval_set.evalset.json
backend/agents/data_analyst/: __init__.py  agent.py  config.json
backend/agents/web_content_extractor/: README.md  __init__.py  agent.py  config.json  schemas.py  test_basic_functions.py  utils.py
backend/agents/web_content_extractor/docs/: detailed_design.md  plan.md  (+1 more)
backend/api/: adk_web_server.py  adk_web_server.py.backup
backend/api/routers/: __init__.py  apps_router.py  core_router.py  platform_router.py
backend/models/: __init__.py  evaluation.py  platform.py  requests.py  responses.py  session.py
backend/services/: __init__.py  platform_service.py
docs/: adding_new_endpoints_example.md  agent-configuration.md  ai-agent-app-platform-design.md  ai-agent-app-platform-tasks.md  api-reference.md  debugging-guide.md  design.md  development-commands.md  google-adk-llms-full.txt  nextjs-fastapi-google-adk-implementation-guide.md  project-structure.md  troubleshooting-sse-message-display.md  web-feature-development-guide.md
frontend/: CLAUDE.md  package-lock.json  package.json
frontend/src/app/: app-routing.module.ts  app.module.ts
tests/: TESTING.md  quick_test.py  test_platform_apis.py  test_server.py
(+33 files in other folders)
